# PyGuitarSynthesis

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt  setup.py
.github/workflows/: python-package.yml
docs/: index.rst
examples/: example_01.py
py_guitar_synth/: __init__.py  __main__.py  instrument_parser.py  instruments.py  sheets.py  signal_processing.py  tab_parser.py  types.py
py_guitar_synth/assets/: agua_marina.txt  classical_guitar.json  law_bass.txt  osad_eini.txt  piano.json  violine.json
tests/: conftext.py  test_instruments.py  test_signal_procesing.py  test_tab_parser.py
